objects/FSL_Proactive_Work__mdt.object
<CustomObject>
    <fields>
        <fullName>Appointment_Days_Until_Due__c</fullName>
        <label>Appointment Days Until Due</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appointment_Duration_Minutes__c</fullName>
        <label>Appointment Duration Minutes</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appointment_Special_Instructions__c</fullName>
        <label>Appointment Special Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Listing__c</fullName>
        <label>Days Since Last Listing</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Service__c</fullName>
        <label>Days Since Last Service</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Until_Next_Service__c</fullName>
        <label>Days Until Next Service</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Id__c</fullName>
        <label>Dealer Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Type__c</fullName>
        <label>Dealer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>Franchise</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Independent</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Independent - ACV Certified</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Wholesaler</label>
                </value>
                <value>
                    <fullName>Dealer Group (Parent Account)</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Commercial</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inspection_Type_Unique_Id__c</fullName>
        <label>Inspection Type Unique Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FSL Proactive Work</label>
    <pluralLabel>FSL Proactive Work</pluralLabel>
</CustomObject>